--- a/src/components/styles/Badge.css
+++ b/src/components/styles/Badge.css
@@ -7,11 +7,19 @@
 }
 
 .Badge_header {
-  padding: 0.5rem 0;
-  height: 80px;
-  background: #1b1b25;
   display: flex;
   justify-content: center;
+  align-items: center;
+  padding: 0.5rem 0;
+  height: 60px;
+  background: #1b1b25;
+}
+
+.Badge_header-text {
+  color: white;
+  margin: 0;
+  font-size: 20px;
+  font-weight: 900;
 }
 
 .Badge_section-name {
@@ -26,23 +34,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem 0;
+  padding: 1.25rem 0;
   background: #f4f4f7;
 }
 
 .Badge_avatar {
   border-radius: 50%;
   margin-right: 1rem;
-  width: 120px;
-  height: 120px;
+  width: 100px;
 }
 
-.Badge_footer {
-  /*  height: 54px; Si lo pongo no se ve en la pantalla el #platziconf*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #98ca3f;
-  font-weight: bold;
-  font-style: italic;
+@media screen and (max-width: 800px) {
+  .Badge {
+    height: auto;
+    padding-bottom: 15px;
+  }
 }
